--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "project_website",
   "version": "1.0.0",
   "description": "",
-  
   "source": "/src/index.html",
   "scripts": {
     "start": "parcel src/index.html --open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "parcel build"
   },
   "keywords": [],
   "author": "Deep Patel",
   "license": "ISC",
+  "homepage": "https://deepp0925.github.io/research_project_website",
   "devDependencies": {
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "gh-pages": "^4.0.0",
     "parcel": "^2.6.0",
     "process": "^0.11.10",
     "typescript": "^4.7.2"
